--- a/AdvancedAuto/ConfiguratorWindow.xaml
+++ b/AdvancedAuto/ConfiguratorWindow.xaml
@@ -30,10 +30,11 @@
                             <RowDefinition Height="0.4*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Image x:Name="imgClose" Source="/Images/close_icon.png" Grid.Column="2" HorizontalAlignment="Right" Height="15" MouseDown="imgClose_MouseDown"/>
+                        <Image x:Name="imgClose" Source="/Images/close_icon.png" Grid.Column="1" HorizontalAlignment="Right" Height="15" MouseDown="imgClose_MouseDown"/>
                     </Grid>
-                    <Image x:Name="imgProfile" Source="/Images/profile_icon.png" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="50" MouseDown="imgProfile_MouseDown"/>
+                    <Image x:Name="imgProfile" Source="/Images/profile_icon.png" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="50" MouseDown="imgProfile_MouseDown"/>
                     <Button x:Name="tmpbtn" Content="->" Width="100" Click="tmpbtn_Click"/>
+                    <Image x:Name="imgLogo" Width="107" Source="/Images/profile_icon.png" Height="60" HorizontalAlignment="Left"/>
                 </Grid>
             </Border>
 
@@ -48,9 +49,15 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <StackPanel x:Name="spCarImg">
-
-                    </StackPanel>
+                    <StackPanel x:Name="spCarImg"/>
+                    <WrapPanel x:Name="spCarInfo" Grid.Row="1">
+                        <StackPanel>
+                            <TextBlock x:Name="txtCarTitle" Text="Title" Style="{StaticResource textCarTitle}"/>
+                            <TextBlock x:Name="txtCarPrice" Text="Price" Style="{StaticResource textCarPrice}"/>
+                            <Image x:Name="imgLike" Source="/images/unshaded_star_icon.png" Width="25" Height="25" HorizontalAlignment="Left" Margin="20, 10, 0, 0" MouseDown="imgLike_MouseDown"/>
+                        </StackPanel>
+                        
+                    </WrapPanel>
                 </Grid>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
@@ -66,24 +73,24 @@
 
                     <TextBlock Text="Цвет" Style="{StaticResource textDetName}"/>
                     <WrapPanel Grid.Row="1">
-                        <Rectangle x:Name="imgColor1" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgColor1_MouseDown"/>
+                        <Rectangle x:Name="imgColor1" Width="70" Height="70" Margin="20, 5, 10, 10" MouseDown="imgColor1_MouseDown"/>
                         <Rectangle x:Name="imgColor2" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgColor2_MouseDown"/>
                         <Rectangle x:Name="imgColor3" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgColor3_MouseDown"/>
                         <Rectangle x:Name="imgColor4" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgColor4_MouseDown"/>
                     </WrapPanel>
                     <TextBlock Text="Диски" Grid.Row="2" Style="{StaticResource textDetName}"/>
                     <WrapPanel Grid.Row="3">
-                        <Image x:Name="imgWheel1" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgWheel1_MouseDown"/>
+                        <Image x:Name="imgWheel1" Width="70" Height="70" Margin="20, 5, 10, 10" MouseDown="imgWheel1_MouseDown"/>
                         <Image x:Name="imgWheel2" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgWheel2_MouseDown"/>
                         <Image x:Name="imgWheel3" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgWheel3_MouseDown"/>
                         <Image x:Name="imgWheel4" Width="70" Height="70" Margin="10, 5, 10, 10" MouseDown="imgWheel4_MouseDown"/>
                     </WrapPanel>
                     <TextBlock Text="Интерьер" Grid.Row="4" Style="{StaticResource textDetName}"/>
                     <WrapPanel Grid.Row="5">
-                        <Image x:Name="imgInterior1" Width="70" Height="70" Margin="10, 5, 10, 5" MouseDown="imgWheel1_MouseDown"/>
-                        <Image x:Name="imgInterior2" Width="70" Height="70" Margin="10, 5, 10, 5" MouseDown="imgWheel2_MouseDown"/>
-                        <Image x:Name="imgInterior3" Width="70" Height="70" Margin="10, 5, 10, 5" MouseDown="imgWheel3_MouseDown"/>
-                        <Image x:Name="imgInterior4" Width="70" Height="70" Margin="10, 5, 10, 5" MouseDown="imgWheel4_MouseDown"/>
+                        <Image x:Name="imgInterior1" Width="70" Height="70" Margin="20, 5, 10, 5" Source="/Images/profile_icon.png" MouseDown="imgInterior1_MouseDown"/>
+                        <Image x:Name="imgInterior2" Width="70" Height="70" Margin="10, 5, 10, 5" Source="/Images/profile_icon.png" MouseDown="imgInterior2_MouseDown"/>
+                        <Image x:Name="imgInterior3" Width="70" Height="70" Margin="10, 5, 10, 5" Source="/Images/profile_icon.png" MouseDown="imgInterior3_MouseDown"/>
+                        <Image x:Name="imgInterior4" Width="70" Height="70" Margin="10, 5, 10, 5" Source="/Images/profile_icon.png" MouseDown="imgInterior4_MouseDown"/>
                     </WrapPanel>
                 </Grid>
             </Grid>
