--- a/AdvancedAuto/App.xaml
+++ b/AdvancedAuto/App.xaml
@@ -127,6 +127,21 @@
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="Margin" Value="20, 2, 0, 0"/>
+        </Style>
+
+        <Style x:Key="textCarTitle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Margin" Value="20, 10, 0, 0"/>
+        </Style>
+
+        <Style x:Key="textCarPrice" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="FontWeight" Value="Light"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Margin" Value="20, 5, 0, 0"/>
         </Style>
     </Application.Resources>
 </Application>
